# youtube-uploader-python

./: .gitignore  Dockerfile  README.md  pyproject.toml
database/flyway/: entrypoint.bash  flyway.conf
database/flyway/sql/migrations/: V0.0__initialschema.sql  V0.1__playlists.sql  V0.2__add_video_id.sql
src/: database.py  main.py  my_types.py
src/youtube/: auth.py  client_secrets_example.json  upload_video.py
