[project]
name = "youtube-uploader-python"
version = "0.1.0"
description = "Youtube video uploader"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.161.0",
    "google-auth-oauthlib>=1.2.1",
    "oauth2client>=4.1.3",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
]


[tool.uv]
dev-dependencies = [
    "httplib2>=0.22.0",
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.3.241126",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
uploader = 'src.main:main'
